# conversation-data-generate

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/: content_generator.py  conversation_models.py  toolsets.py
src/tools_registry/: template.yaml
utility/: convert_single_conversation_to_md.py
